--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon -L ./src/index.js",
     "start": "node ./src/index.js",
     "setup-db": "node ./src/db/setup.js",
-    "setup-test-db": "NODE_ENV=test node ./src/db/setup.js",
+    "setup-test-db": "cross-env NODE_ENV=test node ./src/db/setup.js",
     "test": "jest --watchAll --detectOpenHandles --runInBand --verbose",
     "unitTests": "jest --testPathPattern=/unit/ --watchAll --verbose",
     "integrationTest": "jest --testPathPattern=/integration/ --watchAll --detectOpenHandles --runInBand --verbose",
@@ -26,6 +26,7 @@
     "pg": "^8.14.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.1.0"
