--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,10 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "main": "index.js",
+  "default": "index.html",
   "scripts": {
+    "start": "parcel ./*.html",
+    "build": "parcel build ./*.html --dist-dir ./dist",
     "test": "jest --watchAll",
     "coverage": "jest --coverage"
   },
@@ -10,8 +12,15 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
+  "devDependencies": {
     "jest": "^29.7.0",
-    "jsdom": "^26.1.0"
+    "jsdom": "^26.1.0",
+    "node-localstorage": "^3.0.5",
+    "parcel": "^2.14.4"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "./__tests__/helpers.js"
+    ]
   }
 }
